fixes double scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .zoom{
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .container {
